--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-lang/lang": "~8.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "overtrue/easy-sms": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
