--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,11 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-code_expire_time=60
+#验证码缓存时间
+CODE_EXPIRE_TIME=60
+
+#阿里云密钥
+ALIYUN_ACCESS_KEY_ID=
+ALIYUN_ACCESS_KEY_SECRET=
+#阿里云短信签名
+ALIYUN_SMS_SIGN_NAME=
