--- a/.env.example
+++ b/.env.example
@@ -51,11 +51,10 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-#验证码缓存时间
+#验证码发送间隔时间
 CODE_EXPIRE_TIME=60
 
-#阿里云密钥
+#阿里云
 ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
-#阿里云短信签名
-ALIYUN_SMS_SIGN_NAME=
+ALIYUN_SMS_SING_NAME=
