--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,8 @@
     "@types/ws": "^8.5.3",
     "@vee-validate/i18n": "^4.5.7",
     "@vee-validate/rules": "^4.5.7",
+    "@wangeditor/editor": "^5.0.0",
+    "@wangeditor/editor-for-vue": "^5.1.10",
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "echarts": "^5.3.2",
@@ -27,7 +29,6 @@
     "vee-validate": "^4.5.7",
     "vue": "^3.2.25",
     "vue-router": "4",
-    "wangeditor": "^4.7.12",
     "ws": "^8.5.0",
     "yup": "^0.32.11"
   },
