--- a/vue/package.json
+++ b/vue/package.json
@@ -7,6 +7,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "2.0.0-beta.1",
         "@icon-park/vue-next": "^1.3.6",
         "@toast-ui/editor": "^3.1.4",
         "@types/prosemirror-commands": "^1.0.4",
