--- a/vue/package.json
+++ b/vue/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.21",
         "mockjs": "^1.1.0",
         "pinia": "^2.0.13",
+        "plugin-vue@^2.0.0": "link:vitejs/plugin-vue@^2.0.0",
         "vee-validate": "^4.5.11",
         "vue": "^3.2.33",
         "vue-router": "^4.0.14",
