--- a/vue/package.json
+++ b/vue/package.json
@@ -23,7 +23,7 @@
         "axios": "^0.24.0",
         "dayjs": "^1.11.1",
         "echarts": "^5.3.2",
-        "element-plus": "^1.3.0-beta.10",
+        "element-plus": "^2.2.5",
         "gsap": "^3.10.3",
         "lodash": "^4.17.21",
         "mockjs": "^1.1.0",
