--- a/vue/package.json
+++ b/vue/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
+        "build": "vite build",
+        "build-ts": "vue-tsc --noEmit && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -17,6 +18,7 @@
         "@types/ws": "^8.5.3",
         "@vee-validate/i18n": "^4.5.11",
         "@vee-validate/rules": "^4.5.11",
+        "@vueuse/core": "^8.7.3",
         "@wangeditor/editor": "^5.0.0",
         "@wangeditor/editor-for-vue": "^5.1.10",
         "animate.css": "^4.1.1",
@@ -29,6 +31,7 @@
         "mockjs": "^1.1.0",
         "pinia": "^2.0.13",
         "plugin-vue@^2.0.0": "link:vitejs/plugin-vue@^2.0.0",
+        "type-fest": "^2.13.1",
         "vee-validate": "^4.5.11",
         "vue": "^3.2.33",
         "vue-router": "^4.0.14",
