--- a/.env.example
+++ b/.env.example
@@ -52,9 +52,15 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #验证码发送间隔时间
-CODE_EXPIRE_TIME=60
+CODE_EXPIRE_TIME=600
 
 #阿里云
 ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
-ALIYUN_SMS_SING_NAME=
+ALIYUN_SMS_SING_NAME=身份验证
+
+#用户头像裁切尺寸
+AVATAR_CROP_WIDTH=500
+AVATAR_CROP_HEIGHT=100
+
+MOBILE=
