--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 CODE_EXPIRE_TIME=600
 
 #阿里云
-ALIYUN_ACCESS_KEY_ID=
+ALIYUN_ACCESS_KEY_ID=aa
 ALIYUN_ACCESS_KEY_SECRET=
 ALIYUN_SMS_SING_NAME=身份验证
 
