优化表格列表展示

--- a/vue/.env.production
+++ b/vue/.env.production
@@ -1,4 +1,5 @@
-# VITE_API_URL=/
-# VITE_MOCK_ENABLE=false
-# VITE_ROUTER_AUTOLOAD=false
+# 如果不使用mockjs请设置具体网址
+VITE_API_URL=
+# 是否开启mockjs插件
+VITE_MOCK_ENABLE=true
 
