--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "nwidart/laravel-modules": "^9.0",
         "overtrue/easy-sms": "^2.1",
         "spatie/image": "^2.2",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "yansongda/pay": "~3.1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
