--- a/vue/package.json
+++ b/vue/package.json
@@ -9,51 +9,53 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "2.0.0-beta.1",
-        "@icon-park/vue-next": "^1.3.6",
-        "@toast-ui/editor": "^3.1.4",
+        "@icon-park/vue-next": "^1.4.1",
+        "@kangc/v-md-editor": "^2.3.15",
+        "@toast-ui/editor": "^3.1.7",
         "@types/prosemirror-commands": "^1.0.4",
-        "@types/prosemirror-model": "^1.16.1",
-        "@types/prosemirror-state": "^1.2.8",
-        "@types/prosemirror-view": "^1.23.1",
+        "@types/prosemirror-model": "^1.16.2",
+        "@types/prosemirror-state": "^1.3.0",
+        "@types/prosemirror-view": "^1.23.3",
         "@types/ws": "^8.5.3",
         "@vee-validate/i18n": "^4.5.11",
         "@vee-validate/rules": "^4.5.11",
-        "@vueuse/core": "^8.7.3",
-        "@wangeditor/editor": "^5.0.0",
-        "@wangeditor/editor-for-vue": "^5.1.10",
+        "@vueuse/core": "^8.7.5",
+        "@wangeditor/editor": "^5.1.1",
+        "@wangeditor/editor-for-vue": "^5.1.12",
         "animate.css": "^4.1.1",
         "axios": "^0.24.0",
-        "dayjs": "^1.11.1",
-        "echarts": "^5.3.2",
-        "element-plus": "^2.2.5",
-        "gsap": "^3.10.3",
+        "dayjs": "^1.11.3",
+        "echarts": "^5.3.3",
+        "element-plus": "^2.2.8",
+        "gsap": "^3.10.4",
         "lodash": "^4.17.21",
         "mockjs": "^1.1.0",
-        "pinia": "^2.0.13",
-        "type-fest": "^2.13.1",
+        "pinia": "^2.0.14",
+        "prismjs": "^1.28.0",
+        "type-fest": "^2.15.1",
         "vee-validate": "^4.5.11",
-        "vue": "^3.2.33",
-        "vue-router": "^4.0.14",
-        "ws": "^8.5.0",
+        "vue": "^3.2.37",
+        "vue-router": "^4.0.16",
+        "ws": "^8.8.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.182",
         "@types/mockjs": "^1.0.6",
         "@types/prosemirror-inputrules": "^1.0.4",
-        "@vitejs/plugin-vue": "^2.3.1",
-        "autoprefixer": "^10.4.4",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "autoprefixer": "^10.4.7",
         "path": "^0.12.7",
-        "postcss": "^8.4.12",
+        "postcss": "^8.4.14",
         "rollup-plugin-visualizer": "^5.6.0",
-        "sass": "^1.50.0",
-        "tailwindcss": "^3.0.24",
-        "typescript": "^4.6.3",
-        "unplugin-auto-import": "^0.5.11",
-        "unplugin-vue-components": "^0.17.21",
-        "vite": "^2.9.5",
+        "sass": "^1.53.0",
+        "tailwindcss": "^3.1.4",
+        "typescript": "^4.7.4",
+        "unplugin-auto-import": "^0.9.2",
+        "unplugin-vue-components": "^0.21.0",
+        "vite": "^2.9.13",
         "vite-plugin-mock": "^2.9.6",
         "vue-tsc": "^0.29.8",
-        "webpack": "^5.72.0"
+        "webpack": "^5.73.0"
     }
 }
