--- a/vue/tsconfig.json
+++ b/vue/tsconfig.json
@@ -15,7 +15,7 @@
       "@/*": ["./src/*"],
       "#/*": ["./types/*"]
     },
-    "types": ["element-plus/global", "echarts", "lodash"]
+    "types": ["element-plus/global", "echarts", "lodash", "web-bluetooth"]
   },
   "include": [
     "src/**/*.ts",
@@ -26,5 +26,6 @@
     "mock/**/*.ts",
     "types/**/*.d.ts",
     "types/**/*.ts"
-  ]
+  ],
+  "exclude": ["node_modules", "dist"]
 }
