--- a/vue/package.json
+++ b/vue/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "build-ts": "vue-tsc --noEmit && vite build",
+        "build-js": "vite build",
+        "build": "vue-tsc --noEmit && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -16,10 +16,10 @@
         "@types/prosemirror-model": "^1.16.2",
         "@types/prosemirror-state": "^1.3.0",
         "@types/prosemirror-view": "^1.23.3",
+        "@types/web-bluetooth": "^0.0.14",
         "@types/ws": "^8.5.3",
         "@vee-validate/i18n": "^4.5.11",
         "@vee-validate/rules": "^4.5.11",
-        "@vueuse/core": "^8.7.5",
         "@wangeditor/editor": "^5.1.1",
         "@wangeditor/editor-for-vue": "^5.1.12",
         "animate.css": "^4.1.1",
@@ -42,6 +42,7 @@
     "devDependencies": {
         "@types/lodash": "^4.14.182",
         "@types/mockjs": "^1.0.6",
+        "@types/prismjs": "^1.26.0",
         "@types/prosemirror-inputrules": "^1.0.4",
         "@vitejs/plugin-vue": "^2.3.3",
         "autoprefixer": "^10.4.7",
@@ -55,7 +56,7 @@
         "unplugin-vue-components": "^0.21.0",
         "vite": "^2.9.13",
         "vite-plugin-mock": "^2.9.6",
-        "vue-tsc": "^0.29.8",
+        "vue-tsc": "^0.38.2",
         "webpack": "^5.73.0"
     }
 }
