--- a/vue/tsconfig.json
+++ b/vue/tsconfig.json
@@ -15,7 +15,7 @@
       "@/*": ["./src/*"],
       "#/*": ["./types/*"]
     },
-    "types": ["element-plus/global", "echarts", "lodash", "web-bluetooth", "naive-ui/volar"]
+    "types": ["element-plus/global", "echarts", "lodash", "web-bluetooth"]
   },
   "include": [
     "src/**/*.ts",
