fix:移除项目配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ yarn-error.log
 node_modules
 worker.log
 vue/node_modules
-/addons/*
+/addons
+/config.php
 !/addons/.gitkeep
 /public/core
 /public/images
