--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+######################## 项目配置
 #验证码发送间隔时间
 CODE_EXPIRE_TIME=600
 
@@ -63,7 +64,8 @@ ALIYUN_SMS_SING_NAME=身份验证
 AVATAR_CROP_WIDTH=500
 AVATAR_CROP_HEIGHT=100
 
+#测试手机号
 MOBILE=
 
+#支付
 ALIPAY_APP_SECRET_CERT=
-
