--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,10 @@ worker.log
 Thumbs.db
 dist
 /dist
-/addons
 /modules_statuses.json
 /.pnpm-debug.log
 /php.code-workspace
+/addons/*
+!/addons/AddonController.php
+!/addons/AddonModel.php
+
